src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACC_ApprovalStatus__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_BannerMaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner (Master)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Banner__c.BAN_Active__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Banner__c</referenceTo>
        <relationshipLabel>Master Accounts</relationshipLabel>
        <relationshipName>MasterAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC_BannerNetwork__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Banner (Network)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Banner__c.BAN_Active__c</field>
                <operation>notEqual</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Banner__c</referenceTo>
        <relationshipLabel>Network Accounts</relationshipLabel>
        <relationshipName>NetworkAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACC_BrandVisibility__c</fullName>
        <label>Brand Visibility</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_BusinessRegistrationNumber__c</fullName>
        <label>Business Registration Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACC_BypassProcess__c</fullName>
        <label>Bypass Process</label>
        <picklist>
            <picklistValues>
                <fullName>P01 - ACC - Set Account Geography and Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P02 - ACC - Create Partner Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P03 - ACC - Inherit Banners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P04 - ACC - Inherit Customer Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P06 - ACC - Submit for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P07 - ACC - Set Generic User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P11 - ACC - Affiliate Account to Business Group</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ACC_CustomerID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACC_Geography__c</fullName>
        <globalPicklist>GeographiesList</globalPicklist>
        <label>Geography</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_LastVisitBBGR__c</fullName>
        <label>Last Visit BBGR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACC_LastVisitEssilor__c</fullName>
        <label>Last Visit Essilor</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACC_LastVisitNikkon__c</fullName>
        <label>Last Visit Nikkon</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACC_Network__c</fullName>
        <globalPicklist>NetworkList</globalPicklist>
        <label>Network</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_PotentialBBGR__c</fullName>
        <label>Potential BBGR</label>
        <picklist>
            <picklistValues>
                <fullName>Small (&lt; 30 k€)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (30 - 60 k€)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (&gt; 60 k€)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_PotentialEssilor__c</fullName>
        <label>Potential Essilor</label>
        <picklist>
            <picklistValues>
                <fullName>Small (&lt; 30 k€)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (30 - 60 k€)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (&gt; 60 k€)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_PotentialNikkon__c</fullName>
        <label>Potential Nikkon</label>
        <picklist>
            <picklistValues>
                <fullName>Small (&lt; 30 k€)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (30 - 60 k€)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (&gt; 60 k€)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_SalesRepBBGR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep BBGR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC_SalesRepEssilor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep Essilor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC_SalesRepNikkon__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep Nikkon</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC_Segment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Segment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Segment__c.SEG_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please ensure to select an active segment value.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC_ShopArea__c</fullName>
        <label>Shop Area (m²)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACC_ShopLevel__c</fullName>
        <label>Shop Level</label>
        <picklist>
            <picklistValues>
                <fullName>Basement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper Floor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_ShopLocation__c</fullName>
        <label>Shop Location</label>
        <picklist>
            <picklistValues>
                <fullName>Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pedestrian Zone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Street</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_ShopOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the owner account related to this customer</inlineHelpText>
        <label>Shop Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The chosen account is not an Owner Account. Please select an Owner Account.</errorMessage>
            <filterItems>
                <field>$Source.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only Owner Accounts are displayed</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACC_SoWBBGR__c</fullName>
        <label>Share of Wallet BBGR</label>
        <picklist>
            <picklistValues>
                <fullName>NW (&lt; 20%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBF (20 - 50 %)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS (&gt; 50 %)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_SoWEssilor__c</fullName>
        <label>Share of Wallet Essilor</label>
        <picklist>
            <picklistValues>
                <fullName>NW (&lt; 20%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBF (20 - 50 %)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS (&gt; 50 %)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_SoWNikkon__c</fullName>
        <label>Share of Wallet Nikkon</label>
        <picklist>
            <picklistValues>
                <fullName>NW (&lt; 20%)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBF (20 - 50 %)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS (&gt; 50 %)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACC_StopList__c</fullName>
        <formula>IF( ACC_Block__c,IMAGE(&quot;/servlet/servlet.FileDownload?file=0153E000000Abzr&quot;,&quot;Yes&quot;),&quot;No&quot;)</formula>
        <label>Stop List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACC_TCH_AffiliateToBusinessGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate to Business Group</label>
        <referenceTo>BusinessGroup__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dispensing_Tool_Essilor__c</fullName>
        <label>Dispensing Tool (Essilor)</label>
        <picklist>
            <controllingField>Dispensing_Tools__c</controllingField>
            <picklistValues>
                <fullName>Visioffice 1.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visioffice 2.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eye Ruler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visiostaff</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Dispensing_Tools__c</fullName>
        <label>Dispensing Tools</label>
        <picklist>
            <picklistValues>
                <fullName>Essilor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hoya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rodenstock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zeiss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dsipensing_Tool_Competitor__c</fullName>
        <label>Dispensing Tool Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accHierarchy__Hierarchy_Parents__c</fullName>
        <label>Hierarchy Parents</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>accHierarchy__TopParentId__c</fullName>
        <label>Top Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Whitespace_account</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Whitespace account</label>
    </listViews>
    <recordTypes>
        <fullName>ACC_RT_BBGR</fullName>
        <active>true</active>
        <description>Select BBGR if you want to create an Account that is part of the BBGR Network</description>
        <label>BBGR</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACC_RT_Essilor</fullName>
        <active>true</active>
        <description>Select Essilor if you want to create an Account that is part of the Essilor Network</description>
        <label>Essilor</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACC_RT_MasterAccount</fullName>
        <active>true</active>
        <description>Select Master Account if you want to create a Cross-Network Account</description>
        <label>Master Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACC_RT_NetworkAccount</fullName>
        <active>true</active>
        <label>Network Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACC_RT_Nikon</fullName>
        <active>true</active>
        <description>Select Nikon if you want to create an Account that is part of the Nikon Network</description>
        <label>Nikon</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACC_RT_Signet</fullName>
        <active>true</active>
        <description>Select Signet if you want to create an Account that is part of the Signet Network</description>
        <label>Signet</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>